# sshx

./: .gitignore  API_KEY_USAGE_EXAMPLE.md  AUTHENTICATION_IMPLEMENTATION.md  BROWSER_ANALYSIS_REPORT.md  Cargo.toml  DEMO_GUIDE.md  HTTP_API_GUIDE.md  P2P_README.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  SESSION_PERSISTENCE_FINAL_SUMMARY.md  SESSION_PERSISTENCE_GUIDE.md  SESSION_PERSISTENCE_IMPLEMENTATION.md  SSHX_WORKER_MIGRATION_SUMMARY.md  USER_API_KEY_GUIDE.md  USER_SESSION_MANAGEMENT_GUIDE.md  browser-chat.txt  demo_session_management.sh  demo_session_persistence.sh  fly.toml  iroh-browser-chat.xml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  start_server.sh  tsconfig.json  vite.config.ts  wrangler.jsonc
.cargo/: config.toml
.claude/: settings.local.json
app/: Cargo.toml  tauri.conf.json
app/src/: commands.rs  lib.rs  main.rs  session.rs
browser/: Cargo.toml
browser/src/: lib.rs
cli/: Cargo.toml
cli/src/: controller.rs  lib.rs  main.rs  runner.rs  test_conversion.rs
crates/sshx/: Cargo.toml
crates/sshx-app/: Cargo.toml  tauri.conf.json
crates/sshx-app/index.html/: index.html
crates/sshx-app/src/: lib.rs  main.rs
crates/sshx-core/proto/: sshx.proto
crates/sshx-server/: Cargo.toml
crates/sshx-server/examples/: api_key_test.rs  auth_test.rs  http_api_test.rs  session_management_test.rs  session_token_test.rs
crates/sshx-server/src/: grpc.rs  lib.rs  listen.rs  state.rs  user.rs  user_service.rs  web.rs
crates/sshx-web/: Cargo.toml
crates/sshx-web/src/: lib.rs
crates/sshx-worker/: .gitignore  Cargo.toml  README.md  package.json  schema.sql  wrangler.toml
crates/sshx-worker/src/: db.rs  durable_object.rs  grpc.rs  grpc_gateway.rs  lib.rs  protocol.rs  session.rs  state.rs  user_service.rs  websocket.rs
crates/sshx/examples/: p2p_client.rs  session_persistence_test.rs
crates/sshx/src/: controller.rs  lib.rs  main.rs  p2p.rs  p2p_events.rs  p2p_network.rs  p2p_terminal_sync.rs  session_persistence.rs  string_compressor.rs
migrations/: 0001_create_initial_tables.sql
scripts/: build-wasm.sh  release.sh  setup-tauri.sh
shared/: Cargo.toml
shared/src/: crypto.rs  events.rs  lib.rs  message.rs  p2p.rs  session.rs  session_manager.rs  ticket.rs
src/: worker-configuration.d.ts
src/lib/: MultiSessionManager.svelte  P2PSession.svelte  Session.svelte  auth.ts  browser.d.ts  browser.js  browser_bg.js  browser_bg.wasm  browser_bg.wasm.d.ts  grpc-proxy.ts  message-router.ts  p2p.ts  protocol.ts  sshx-api.ts  tauri-api.ts
src/lib/ui/: AuthModal.svelte  OverlayMenu.svelte  TauriToolbar.svelte  ToastContainer.svelte  Toolbar.svelte
src/routes/: +page.svelte
src/routes/api/[...paths]/: +server.ts
src/routes/app/: +page.svelte
src/routes/home/: +page.svelte  +page.ts
src/routes/p2p/: +page.svelte
src/routes/p2p/[id]/: +page.svelte
src/routes/t/: +page.svelte
src/routes/t/[id]/: +page.svelte
