[workspace]
members = ["cli", "shared", "browser"]
resolver = "2"

[workspace.package]
version = "0.4.1"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "A secure web-based, collaborative terminal."
repository = "https://github.com/ekzhang/sshx"
documentation = "https://sshx.io"
keywords = ["ssh", "share", "terminal", "collaborative"]

[workspace.dependencies]
iroh = { version = "0.91", default-features = false }
iroh-base = { version = "0.91", default-features = false, features = [
  "ticket",
] }
iroh-gossip = { version = "0.91", default-features = false, features = ["net"] }
aes = "0.8"
anyhow = "1.0.62"
argon2 = "0.5"
clap = { version = "4.5.17", features = ["derive", "env"] }
ctr = "0.9"
data-encoding = "2.3"
n0-future = "0.1.2"
postcard = "1.1.1"
prost = "0.13.4"
rand = "0.8"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0"
shared = { version = "0.4.1", path = "shared" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
strip = true
