[package]
name = "app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
shared = { path = "../shared" }
anyhow = { workspace = true }
tokio = { workspace = true }
iroh-gossip = { workspace = true }
tokio-stream = { workspace = true }
tauri-plugin-cli = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
