[package]
name = "app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
shared = { path = "../shared" }
anyhow = { workspace = true }
tokio = { workspace = true }
iroh-gossip = { workspace = true }
tokio-stream = { workspace = true }
tauri-plugin-cli = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
log = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = "0.8"
tauri-plugin-opener = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
