[package]
name = "sshx-core"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes.workspace = true
anyhow.workspace = true
argon2.workspace = true
ctr.workspace = true
data-encoding.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
