[package]
name = "shared"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes.workspace = true
anyhow.workspace = true
argon2.workspace = true
ctr.workspace = true
data-encoding.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
iroh-base.workspace = true
n0-future = "0.1.2"
postcard = "1.1.1"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
tokio-util = "0.7"
tracing.workspace = true
futures-lite = "2.3"
url = "2.5"
web-time = { version = "1.1", optional = true }
uuid = { version = "1.0", features = ["v4", "js"] }

[features]
default = []
wasm = ["web-time"]
