[package]
name = "sshx-app"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[lib]
name = "sshx_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sshx-app"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sshx-core.workspace = true
sshx-web = { path = "../sshx-web" }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-window-state = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
productName = "SSHx App"
identifier = "io.sshx.app"