[package]
name = "sshx-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
mio = { git = "https://github.com/WasmEdge/mio_wasi" }

[dependencies]
anyhow = "1.0.75"
data-encoding = "2.5.0"
console_error_panic_hook = "0.1.7"
futures-lite = "1.13.0"
getrandom = { version = "0.2.10", features = ["js"] }
iroh = { version = "0.91.0", default-features = false }
iroh-base = { version = "0.91.0", default-features = false, features = ["ticket"] }
iroh-gossip = { version = "0.91.0", default-features = false }
prost = "0.12.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sshx-core = { path = "../sshx-core" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["console"] }
rand = "0.8.5"
