[package]
name = "sshx"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes = "0.8.3"
ansi_term = "0.12.1"
anyhow.workspace = true
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
base64 = "0.22.0"
aead = "0.5"
bincode = "1.3"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap.workspace = true
data-encoding = "2.5"
dirs = "5.0"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
iroh = "0.91.1"
iroh-gossip = "0.91.0"
pin-project = "1.1"
rand = "0.9"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
sshx-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
whoami = { version = "1.5.1", default-features = false }
ctr = "0.9"
cfg-if = "1.0"
encoding_rs = "0.8"

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
